--- a/package.json
+++ b/package.json
@@ -16,19 +16,27 @@
   },
   "dependencies": {
     "@mdi/font": "7.1.96",
-    "pinia": "^2.0.29",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.3.1",
+    "lodash-es": "^4.17.21",
+    "pinia": "^2.0.30",
     "roboto-fontface": "*",
     "unsplash-js": "^7.0.15",
     "vite-plugin-pages": "^0.28.0",
-    "vue": "^3.2.45",
+    "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.6.28",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@types/jsdom": "^20.0.1",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/test-utils": "^2.2.8",
+    "@vue/test-utils": "^2.2.9",
     "@vue/tsconfig": "^0.1.3",
     "archiver": "^5.3.1",
     "eslint": "^8.33.0",
@@ -38,15 +46,16 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.9.0",
-    "sass": "^1.57.1",
+    "eslint-plugin-vuetify": "^2.0.0-beta.2",
+    "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "shelljs": "^0.8.5",
-    "@types/jsdom": "^20.0.1",
-    "@types/node": "^18.11.18",
-    "typescript": "~4.9.4",
+    "typescript": "~4.9.5",
     "vite": "^4.0.4",
+    "vite-plugin-checker": "^0.5.5",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pages": "^0.28.0",
-    "vite-plugin-vuetify": "^1.0.2"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue-tsc": "^1.0.24"
   }
 }
