--- a/package.json
+++ b/package.json
@@ -11,42 +11,44 @@
     "build": "vite build",
     "dev": "vite",
     "lint": "eslint --fix",
-    "preview": "vite preview",
-    "postversion": "node scripts/postversion.cjs"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-vue": "^4.0.1",
     "@mdi/font": "7.1.96",
+    "@videojs-player/vue": "^1.0.0",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
+    "filepond": "^4.30.4",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-preview": "^4.6.11",
     "lodash-es": "^4.17.21",
-    "pinia": "^2.0.30",
+    "pinia": "^2.0.32",
     "roboto-fontface": "*",
     "splitpanes": "^3.1.5",
     "unsplash-js": "^7.0.15",
-    "vite-plugin-pages": "^0.28.0",
-    "vue": "^3.2.47",
-    "vue-easy-lightbox": "^1.12.0",
+    "video.js": "^8.0.4",
+    "vue-easy-lightbox": "^1.14.0",
     "vue-filepond": "^7.0.3",
     "vue-masonry": "^0.16.0",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.5",
+    "vuetify": "^3.1.7",
     "webfontloader": "^1.6.28",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
+    "@types/node": "^18.14.4",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/test-utils": "^2.2.10",
+    "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
-    "archiver": "^5.3.1",
-    "eslint": "^8.34.0",
+    "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -54,15 +56,15 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.9.0",
     "eslint-plugin-vuetify": "^2.0.0-beta.2",
-    "sass": "^1.58.1",
+    "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
-    "shelljs": "^0.8.5",
     "typescript": "~4.9.5",
-    "vite": "^4.1.1",
-    "vite-plugin-checker": "^0.5.5",
+    "vite": "^4.1.4",
+    "vite-plugin-checker": "^0.5.6",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pages": "^0.28.0",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue-tsc": "^1.1.0"
+    "vite-svg-loader": "^4.0.0",
+    "vue-tsc": "^1.2.0"
   }
 }
